@@ -22,16 +22,16 @@
 		<para>When using <code>cayenne-server-x.x.jar</code> you'll need a few third party jars (all
 			included in <code>lib/third-party</code> directory of the distribution): <itemizedlist>
 				<listitem>
-					<para><link xlink:href="http://jakarta.apache.org/velocity/">Apache Velocity
+					<para><link xlink:href="http://velocity.apache.org/">Apache Velocity
 							Template Engine</link>, version 1.6.x (and all its dependencies bundled
 						with velocity-dep)</para>
 				</listitem>
 				<listitem>
-					<para><link xlink:href="http://jakarta.apache.org/commons/collections">Apache
-							Commons Collections</link>, version 3.1</para>
+					<para><link xlink:href="http://commons.apache.org/collections/">Apache Commons
+							Collections</link>, version 3.2.1</para>
 				</listitem>
 				<listitem>
-					<para><link xlink:href="http://jakarta.apache.org/commons/logging/">Apache
+					<para><link xlink:href="http://commons.apache.org/logging/">Apache
 							Commons Logging</link>, version 1.1</para>
 				</listitem>
 			</itemizedlist></para>
