@@ -237,7 +237,7 @@
 			<dependency>
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
-				<version>3.1</version>
+				<version>3.2.1</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-logging</groupId>
