@@ -45,6 +45,7 @@ CAY-1670 Non-blocking DataRowStore
 CAY-1675 [PATCH] add .first(List<T>) method to Expression to enhance in-memory filtering
 CAY-1679 A notion of default node
 CAY-1680 Get rid of shared locks in DataDomain metadata lookups
+CAY-1684 Upgrade commons-collections dependency to 3.2.1
 
 Bug Fixes Since 3.1M3:
 
